src/np222kk/dv507/a2/test/cases/negative/test_neg_arrays_02.ofp
void main() {
    int iArrA = new int[1];
    int iArrB = {1,2};
}